[gd_scene load_steps=4 format=3 uid="uid://b8a6newcjhtr6"]

[ext_resource type="Script" uid="uid://dh5744v0527yw" path="res://scenes/hud/palette_icon.gd" id="1_d7okt"]
[ext_resource type="Texture2D" uid="uid://c27fkhnl78bgu" path="res://sprites/tilesheet.png" id="1_j1f5e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vwbby"]
atlas = ExtResource("1_j1f5e")
region = Rect2(8, 0, 8, 8)

[node name="PaletteIcon" type="MarginContainer" node_paths=PackedStringArray("building_texture_rect", "selected_texture_rect")]
custom_minimum_size = Vector2(64, 64)
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_d7okt")
building_texture_rect = NodePath("BuildingTextureRect")
selected_texture_rect = NodePath("SelectedTextureRect")

[node name="SelectedTextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_vwbby")

[node name="BuildingTextureRect" type="TextureRect" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
